--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -40,10 +40,10 @@ on:
         required: true
     outputs:
       published:
-        description: "Whether a new version was published"
+        description: "A boolean value to indicate whether a publishing is happened or not"
         value: ${{ jobs.snapshot.outputs.published }}
       publishedPackages:
-        description: "A JSON array containing all the published packages"
+        description: 'A JSON array to present the published packages. The format is [{"name": "@xx/xx", "version": "1.2.0"}, {"name": "@xx/xy", "version": "0.8.9"}]'
         value: ${{ jobs.snapshot.outputs.publishedPackages }}
 
 jobs:
