--- a/setup/action.yml
+++ b/setup/action.yml
@@ -1,85 +1,56 @@
 # Note: This is a composite GitHub Actions, it should do all env setup, caching an so on, so other pipelines can just compose their own stuff on top of that.
 # Docs: https://docs.github.com/en/actions/creating-actions/creating-a-composite-action
 
-name: Configure Environment
-description: Shared configuration for checkout, Node.js and package manager
+name: Setup
+description: |
+  Shared configuration for setting up The Guild's usual environent. It sets up node, detects defined "packageManager", enables corepack and installs with the specified package manager.
+
 inputs:
-  nodeVersion:
-    description: Node.js version to use
-    required: true
-    default: '22'
-  workingDirectory:
-    description: Working directory
+  node-version:
+    description: Node.js version to use.
     required: false
-    default: ./
-  packageManager:
-    description: Package manager
+    default: lts
+  node-version-file:
+    description: File containing the version to use.
     required: false
-    default: yarn
-  packageManagerVersion:
-    description: Package manager version
+  working-directory:
+    description: Working directory.
     required: false
-    default: ''
+    default: .
 
 runs:
   using: composite
   steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@85880fa0301c86cca9da44039ee3bb12d3bedbfa # 0.12.1
+    - name: cancel concurrent runs
+      uses: styfle/cancel-workflow-action@0.12.1
       continue-on-error: true
       with:
         access_token: ${{ github.token }}
-
-    - name: check pnpm version
-      shell: bash
-      id: pnpm
-      if: inputs.packageManager == 'pnpm'
-      working-directory: ${{ inputs.workingDirectory }}
-      run: |
-        PNPM_VERSION=${PNPM_VERSION:-10.6.4}
-        PKG_JSON=$(cat package.json | jq -r '.packageManager' | awk -F@ '{print $2}')
-        if [ ! -z $PKG_JSON ]; then
-          PNPM_VERSION=$PKG_JSON
-        fi
-        if [ ! -z {{inputs.packageManager}} ]; then
-          PNPM_VERSION=${{ inputs.packageManagerVersion }}
-        fi
-        echo "Using PNPM version $PNPM_VERSION"
-        echo "version=$PNPM_VERSION" >> $GITHUB_OUTPUT
-
-    - name: Setup ${{ inputs.packageManager }}
-      id: pnpm_setup
-      if: inputs.packageManager == 'pnpm'
-      uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+    - name: detect package manager
+      id: pkgmngr
+      uses: actions/github-script@v7
       with:
-        version: ${{ steps.pnpm.outputs.version }}
-        run_install: false
-        package_json_file: ${{ inputs.workingDirectory }}/package.json
-
-    - name: setup node
-      uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
+        result-encoding: string
+        script: |
+          const pkgPath = '${{ inputs.working-directory }}/package.json';
+          const { packageManager } = require(pkgPath);
+          const [name] = String(packageManager).split('@');
+          if (!name) {
+            return core.setFailed(`"packageManager" not defined in "${pkgPath}". Please choose a package manager with "corepack use <your favourite manager>".`);
+          }
+          console.log(name);
+          return name;
+    - name: enable corepack
+      run: corepack enable
+    - name: set up node
+      uses: actions/setup-node@v4
       with:
-        node-version: ${{ inputs.nodeVersion }}
-        cache: ${{ inputs.packageManager }}
-        cache-dependency-path: |
-          **/pnpm-lock.yaml
-          **/yarn.lock
-          patches/**
-
-    - name: yarn install
-      shell: bash
-      if: inputs.packageManager == 'yarn' && inputs.packageManagerVersion == ''
-      run: yarn install --ignore-engines --frozen-lockfile --immutable
-      working-directory: ${{ inputs.workingDirectory }}
-
-    - name: modern yarn install
-      shell: bash
-      if: inputs.packageManager == 'yarn' && inputs.packageManagerVersion == 'modern'
-      run: corepack enable && yarn
-      working-directory: ${{ inputs.workingDirectory }}
-
-    - name: pnpm install
-      shell: bash
-      if: inputs.packageManager == 'pnpm'
-      run: pnpm install --frozen-lockfile
-      working-directory: ${{ inputs.workingDirectory }}
+        node-version: ${{ inputs.node-version }}
+        node-version-file: ${{ inputs.node-version-file }}
+        cache: ${{ steps.pkgmngr.outputs.result }}
+    - name: install
+      working-directory: ${{ inputs.working-directory }}
+      run: >
+        ${{ steps.pkgmngr.outputs.result }} install
+        ${{ steps.pkgmngr.outputs.result == 'pnpm' && '--frozen-lockfile' || '' }}
+        ${{ steps.pkgmngr.outputs.result == 'yarn' && '--immutable' || '' }}
