--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,15 +8,14 @@ on:
         required: false
         type: string
         default: '22'
-      packageManager:
-        type: string
+      annotations:
         required: false
-        default: yarn
-      packageManagerVersion:
-        type: string
-        description: Package manager version
+        type: boolean
+        default: true
+      onlyPrFiles:
         required: false
-        default: ''
+        type: boolean
+        default: true
       script:
         required: false
         type: string
@@ -31,12 +30,10 @@ jobs:
       - name: checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - uses: the-guild-org/shared-config/setup@main
+      - uses: the-guild-org/shared-config/setup@v1
         name: setup env
         with:
-          nodeVersion: ${{inputs.nodeVersion}}
-          packageManager: ${{inputs.packageManager}}
-          packageManagerVersion: ${{inputs.packageManagerVersion}}
+          node-version: ${{inputs.nodeVersion}}
 
       - name: lint
         run: ${{ inputs.script || 'yarn eslint --output-file eslint_report.json --format json .' }}
