--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -4,15 +4,6 @@
 on:
   workflow_call:
     inputs:
-      packageManager:
-        type: string
-        required: false
-        default: yarn
-      packageManagerVersion:
-        type: string
-        description: Package manager version
-        required: false
-        default: ''
       nodeVersion:
         required: false
         type: string
@@ -64,12 +55,11 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.githubToken }}
 
-      - uses: the-guild-org/shared-config/setup@main
+      - uses: the-guild-org/shared-config/setup@v1
+        id: env
         name: setup env
         with:
-          nodeVersion: ${{inputs.nodeVersion}}
-          packageManager: ${{inputs.packageManager}}
-          packageManagerVersion: ${{inputs.packageManagerVersion}}
+          node-version: ${{inputs.nodeVersion}}
 
       - name: set version variables
         id: vars
@@ -82,8 +72,8 @@ jobs:
         id: changesets
         uses: dotansimha/changesets-action@069996e9be15531bd598272996fa23853d61590e # v1.5.2
         with:
-          publish: '${{inputs.packageManager}} ${{ inputs.releaseScript }}'
-          version: '${{inputs.packageManager}} ${{inputs.versionScript}}'
+          publish: '${{steps.env.outputs.package-manager}} ${{ inputs.releaseScript }}'
+          version: '${{steps.env.outputs.package-manager}} ${{inputs.versionScript}}'
           commit: 'chore(release): update monorepo packages versions'
           title: ${{inputs.releasePrName}}
           createGithubReleases: ${{ inputs.createGithubReleases }}
