--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -4,10 +4,18 @@
 on:
   workflow_call:
     inputs:
+      # Node setup inputs
       nodeVersion:
         required: false
         type: string
-        default: '22'
+      node-version-file:
+        required: false
+        type: string
+      working-directory:
+        required: false
+        type: string
+
+      # Changesets inputs
       buildScript:
         required: false
         type: string
@@ -29,6 +37,7 @@ on:
         required: true
       npmToken:
         required: true
+
     outputs:
       published:
         description: A boolean value to indicate whether a publishing is happened or not
@@ -58,6 +67,8 @@ jobs:
         name: setup env
         with:
           node-version: ${{inputs.nodeVersion}}
+          node-version-file: ${{inputs.node-version-file}}
+          working-directory: ${{inputs.working-directory}}
 
       - if: inputs.exitPre
         name: Exit Prerelease Mode
