match inputs and refactor

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,10 +4,6 @@
 on:
   workflow_call:
     inputs:
-      nodeVersion:
-        required: false
-        type: string
-        default: '22'
       annotations:
         required: false
         type: boolean
@@ -19,6 +15,21 @@ on:
       script:
         required: false
         type: string
+      reportFile:
+        required: false
+        type: string
+        default: eslint_report.json
+
+      # must match setup/actions.yml
+      node-version:
+        type: string
+        description: Node.js version to use.
+        required: false
+      node-version-file:
+        type: string
+        description: File containing the version to use.
+        required: false
+
     secrets:
       githubToken:
         required: false
@@ -31,9 +42,10 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - uses: the-guild-org/shared-config/setup@v1
-        name: setup env
+        name: set up env
         with:
-          node-version: ${{inputs.nodeVersion}}
+          node-version: ${{ inputs.node-version }}
+          node-version-file: ${{ inputs.node-version-file }}
 
       - name: lint
         run: ${{ inputs.script || 'yarn eslint --output-file eslint_report.json --format json .' }}
