--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -4,17 +4,6 @@
 on:
   workflow_call:
     inputs:
-      # Node setup inputs
-      nodeVersion:
-        required: false
-        type: string
-      node-version-file:
-        required: false
-        type: string
-      working-directory:
-        required: false
-        type: string
-
       # Changesets inputs
       buildScript:
         required: false
@@ -32,6 +21,17 @@ on:
         required: false
         type: boolean
         default: false
+
+      # must match setup/actions.yml
+      node-version:
+        type: string
+        description: Node.js version to use.
+        required: false
+      node-version-file:
+        type: string
+        description: File containing the version to use.
+        required: false
+
     secrets:
       githubToken:
         required: true
@@ -66,9 +66,8 @@ jobs:
         id: env
         name: setup env
         with:
-          node-version: ${{inputs.nodeVersion}}
+          node-version: ${{inputs.node-version}}
           node-version-file: ${{inputs.node-version-file}}
-          working-directory: ${{inputs.working-directory}}
 
       - if: inputs.exitPre
         name: Exit Prerelease Mode
