--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -4,10 +4,6 @@
 on:
   workflow_call:
     inputs:
-      nodeVersion:
-        required: false
-        type: string
-        default: '22'
       releaseScript:
         required: false
         type: string
@@ -27,6 +23,17 @@ on:
         required: false
         type: string
         default: Upcoming Release Changes
+
+      # must match setup/actions.yml
+      node-version:
+        type: string
+        description: Node.js version to use.
+        required: false
+      node-version-file:
+        type: string
+        description: File containing the version to use.
+        required: false
+
     secrets:
       githubToken:
         required: true
@@ -59,7 +66,8 @@ jobs:
         id: env
         name: setup env
         with:
-          node-version: ${{inputs.nodeVersion}}
+          node-version: ${{inputs.node-version}}
+          node-version-file: ${{inputs.node-version-file}}
 
       - name: set version variables
         id: vars
