--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -51,7 +51,7 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     outputs:
       published: ${{ steps.changesets.outputs.published }}
       publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
