--- a/.github/workflows/changesets-dependencies.yml
+++ b/.github/workflows/changesets-dependencies.yml
@@ -32,7 +32,7 @@ on:
 
 jobs:
   changeset:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - name: Checkout
