install-command for custom install

--- a/setup/action.yml
+++ b/setup/action.yml
@@ -20,6 +20,10 @@ inputs:
     description: Working directory.
     required: false
     default: .
+  install-command:
+    type: string
+    description: Custom install command to run after the environment has been set up. Will run instead of the default "install" step.
+    required: false
 
 outputs:
   package-manager:
@@ -60,9 +64,15 @@ runs:
         node-version-file: ${{ inputs.node-version-file }}
         cache: ${{ steps.pkgmngr.outputs.result }}
     - name: install
+      if: inputs.install-command == ""
       shell: bash
       working-directory: ${{ inputs.working-directory }}
       run: >
         ${{ steps.pkgmngr.outputs.result }} install
         ${{ steps.pkgmngr.outputs.result == 'pnpm' && '--frozen-lockfile' || '' }}
         ${{ steps.pkgmngr.outputs.result == 'yarn' && '--immutable' || '' }}
+    - name: custom install
+      if: inputs.install-command != ""
+      shell: bash
+      working-directory: ${{ inputs.working-directory }}
+      run: ${{ inputs.install-command }}
