--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -40,7 +40,7 @@ on:
         required: true
     outputs:
       published:
-        description: 'A boolean value to indicate whether a publishing is happened or not'
+        description: A boolean value to indicate whether a publishing is happened or not
         value: ${{ jobs.snapshot.outputs.published }}
       publishedPackages:
         description:
