--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -43,7 +43,7 @@ on:
         required: true
     outputs:
       published:
-        description: 'A boolean value to indicate whether a publishing is happened or not'
+        description: A boolean value to indicate whether a publishing is happened or not
         value: ${{ jobs.publish.outputs.published }}
       publishedPackages:
         description:
