--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,14 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "postUpdateOptions": ["yarnDedupeFewer"],
-  "automerge": false,
+  "automerge": true,
+  "major": {
+    "automerge": false
+  },
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true
+  },
   "recreateClosed": false,
   "prConcurrentLimit": 25,
   "labels": ["dependencies"],
