--- a/renovate.json
+++ b/renovate.json
@@ -2,10 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "postUpdateOptions": ["yarnDedupeFewer"],
-  "automerge": true,
-  "major": {
-    "automerge": false
-  },
+  "automerge": false,
   "lockFileMaintenance": {
     "enabled": true,
     "automerge": true
