--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -35,6 +35,7 @@
     "prepublishOnly": "pnpm build"
   },
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.0",
     "postcss": "^8.4.38",
