--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.1.0/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "the-guild-org/shared-config" }],
+  "changelog": ["@changesets/cli/changelog"],
   "commit": false,
   "linked": [],
   "access": "public",
