--- a/website-cf/action.yml
+++ b/website-cf/action.yml
@@ -61,7 +61,7 @@ runs:
       # NextJS requires `docs/things/:path*` syntax, but that does not work on Cloudflare.
       # Redirects in CF uses `*`.
       # With `:path*` the redirect from "docs/old/:path*" to "docs/new/:path*" becomes "docs/new/foo*"
-      run: sed -i 's|\([^ ]*\):path\* \([^ ]*\):path\* \([0-9]*\)|\1* \2:path \3|' _redirects
+      run: sed -i 's|\([^ ]*\):path\* \([^ ]*\):path\* \([0-9]*\)|\1* \2:splat \3|' _redirects
       working-directory: ${{ format('{0}/{1}', inputs.websiteDirectory, inputs.artifactDir) }}
 
     - name: push to cloudflare pages
