--- a/website-cf/action.yml
+++ b/website-cf/action.yml
@@ -64,6 +64,8 @@ runs:
       # - /docs/integrations/:path* /docs/other-integrations/:path* 302
       # + /docs/integrations/* /docs/other-integrations/:splat 302
       run: |
+        pwd
+        ls
         [ -f _redirects ] && sed -i 's|\([^ ]*\):path\* \([^ ]*\):path\* \([0-9]*\)|\1* \2:splat \3|' _redirects
       working-directory: ${{ format('{0}/{1}', inputs.websiteDirectory, inputs.artifactDir) }}
 
