--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,15 @@ on:
 jobs:
   stable:
     uses: ./.github/workflows/release-stable.yml
+    permissions:
+      contents: write
+      id-token: write
+      pull-requests: write
+      issues: write
     with:
       releaseScript: release
       nodeVersion: 22
       packageManager: pnpm
     secrets:
-      githubToken: ${{ secrets.GUILD_BOT_TOKEN }}
+      githubToken: ${{ secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NPM_TOKEN }}
